--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ header {
   justify-content: space-between;
   padding: 0px 215px;
   height: 80px;
+  border-bottom: 1px solid #ECECEC;
 }
 
 /* nav */
@@ -86,6 +87,8 @@ nav {
 .page-link {
   color: var(--third-color-dark);
   text-decoration: none;
+  display: inline-flex;
+  padding: 32px 0;
 }
 
 .page-link:hover,
@@ -94,7 +97,20 @@ nav {
 }
 
 .current {
+  position: relative;
   color: #2196f3;
+}
+
+.current::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
+  background-color: #2196f3;
 }
 /* nav END */
 
@@ -134,7 +150,6 @@ nav {
 .hero {
   background: url(../images/hero-Img.jpg) no-repeat;
   background-size: cover;
-  /* background-color: var(--third-background-color-dark); */
   padding-top: 200px;
   padding-bottom: 200px;
   max-width: 1600px;
@@ -176,6 +191,7 @@ nav {
 .button-hero:focus {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: 0.5s;
 }
 
 /* feature */
@@ -200,7 +216,7 @@ nav {
 }
 
 .visually-hidden {
-  stion: absolute;
+  position: absolute;
   white-space: nowrap;
   width: 1px;
   height: 1px;
@@ -245,7 +261,29 @@ nav {
 .work-list {
   display: flex;
   gap: 30px;
+  height: 294px;
+  width: 370px;
 }
+
+.work li {
+  position: relative;
+}
+
+.work h3 {
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  color: #fff;
+  background-color: rgba(47, 48, 58, 0.8);
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+}
+/* Work END */
 
 .team-list-item {
   width: 270px;
@@ -284,12 +322,13 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 50%;
 }
 
 .social:hover {
-  border-radius: 50%;
   background-color: var(--forth-color-blue);
   cursor: pointer;
+  transition: 1s;
 }
 
 .our-team {
@@ -333,6 +372,12 @@ nav {
 .clients-list {
   display: flex;
   gap: 30px;
+}
+
+.clients-item:hover {
+  border-bottom: #212121;
+  opacity: 0.5;
+  transition: 1s;
 }
 /* Main END */
 
@@ -410,6 +455,7 @@ footer p {
 .footer-img:hover {
   background-color: var(--button-background-blue);
   cursor: pointer;
+  transition: 1s;
 }
 
 .subscribe-box {
@@ -427,17 +473,12 @@ footer p {
   width: 358px;
   height: 50px;
   background-color: var(--third-background-color-dark);
+
+  padding-left: 16px;
+  outline: none;
 }
 
-.footer-subscribe label {
-  position: absolute;
-  top: 15px;
-  left: 16px;
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(255, 255, 255, 0.6);
-}
-
+/* button send */
 footer button {
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -445,7 +486,34 @@ footer button {
   border: none;
   width: 200px;
   height: 50px;
+  color: var(--main-color-white);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+
+  color: #ffffff;
 }
+
+.icon_send {
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
+}
+
+footer button:hover,
+footer button:focus {
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: 0.5s;
+}
+/* button send END */
 /* Footer END */
 
 /* Second page */
