--- a/css/main.css
+++ b/css/main.css
@@ -66,16 +66,13 @@ nav {
   margin-right: 93px;
 }
 
-.nav-list li {
-  margin-right: 50px;
-}
-
 .logo-span {
   color: #2196f3;
 }
 
 .nav-list {
   display: flex;
+  gap: 50px;
 
   font-weight: 500;
   line-height: 1.14;
@@ -121,7 +118,7 @@ nav {
 }
 
 .list-adress li {
-  margin-left: 50px;
+  margin-left: 30px;
 }
 
 .list-adress a {
@@ -530,6 +527,10 @@ footer button:focus {
   color: var(--third-color-dark);
   background-color: var(--secondary-background-color-grey);
   border: none;
+  border-radius: 4px;
+  padding: 6px 22px;
+  display: flex;
+  gap: 8px;
 }
 
 .radio-button:hover,
@@ -538,38 +539,50 @@ footer button:focus {
   background-color: var(--button-background-blue);
 }
 
+.portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 /* cards */
+.radio {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 50px;
+}
+
+.examples {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  position: relative;
+}
+
 .examples a {
   text-decoration: none;
 }
 
 .examples h2 {
   color: var(--third-color-dark);
-  text-align: center;
-
+  margin-left: 24px;
+  
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-
+  
   letter-spacing: 0.06em;
 }
 
 .examples p {
-  text-align: center;
+  margin-left: 24px;
   text-decoration: none;
   font-size: 16px;
   line-height: 1.88;
-
+  
   color: var(--secondary-color-grey);
 }
 
 .examples li {
   width: 370px;
-}
-
-/* выделение списка для себя временно */
-.examples li:hover,
-.examples li:focus {
-  border: 1px solid var(--forth-color-blue);
-  opacity: 0.7;
 }
